# anubis

./: .anubis_db  .anubis_root  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  ISSUE_128_ANALYSIS.md  LICENSE-MIT  LOGGING_IMPLEMENTATION.md  LOGGING_SUMMARY.md  README.md  architecture.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/anubis-windows-commands/: SKILL.md
.claude/skills/branch-naming/: SKILL.md
.claude/skills/dependency-mapping/: SKILL.md
.claude/skills/implementation/: SKILL.md
.claude/skills/issue-review/: SKILL.md
.claude/skills/kanban-management/: SKILL.md
benches/: fs_tree_hasher.rs
examples/ffmpeg/: .gitignore  ANUBIS
examples/hello_world/: ANUBIS  build_linux.bat  build_win.bat  main.cpp
examples/nested_staticlib_cpp/: ANUBIS
examples/nested_staticlib_cpp/include/bar/: bar.h
examples/nested_staticlib_cpp/include/foo/: foo.h
examples/nested_staticlib_cpp/src/: foo.cpp  main.cpp
examples/simple_cpp/: ANUBIS  build_win.bat  main.cpp
examples/staticlib_cpp/: ANUBIS
examples/staticlib_cpp/include/foo/: foo.h
examples/staticlib_cpp/src/: foo.cpp  main.cpp
examples/trivial_c/: ANUBIS  main.c
examples/trivial_cpp/: ANUBIS  build_linux.bat  build_win.bat
mode/: ANUBIS
samples/basic/nested_staticlib_cpp/include/util/: util.h
samples/basic/nested_staticlib_cpp/src/: bar.cpp  main.cpp  util.cpp
samples/basic/simple_cpp/: ANUBIS  build_win.bat  main.cpp
samples/basic/staticlib_cpp/: ANUBIS
samples/basic/staticlib_cpp/src/: foo.cpp
samples/basic/trivial_c/: ANUBIS
samples/basic/trivial_cpp/: ANUBIS  build_linux.bat
src/: anubis.rs  anubis_tests.rs  cc_rules.rs  cpp_rules.rs  error.rs  fs_tree_hasher.rs  install_toolchains.rs  job_system.rs  job_system_tests.rs  lib.rs  logging.rs  main.rs  nasm_rules.rs  papyrus.rs  papyrus_serde.rs  papyrus_tests.rs  progress.rs  rule_utils.rs  serde_impl.rs  test_utils.rs  toolchain.rs  toolchain_db.rs  util.rs  util_tests.rs  zig.rs
src/rules/: cc.rs  cc_rules.rs  cmd_rules.rs  mod.rs  nasm.rs  nasm_rules.rs  rule_utils.rs  utils.rs  zig_rules.rs
src/tests/: fs_tree_hasher_bench.rs  fs_tree_hasher_tests.rs  mod.rs
toolchains/: ANUBIS
tools/anubis-vscode/: README.md  language-configuration.json  package.json
tools/anubis-vscode/syntaxes/: papyrus.tmLanguage.json
