[package]
name = "anubis"
version = "0.1.0"
edition = "2021"
license = "MIT OR Unlicense"

[dependencies]
anyhow = "1.0.95"
ariadne = {version = "0.4", features = ["auto-color"]}
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
downcast-rs = "2.0.1"
heck = "0.5.0"
itertools = "0.14.0"
jwalk = "0.8"
glob = "0.3.2"
logos = "0.15.0"
num_cpus = "1.16.0"
pathdiff = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"
ureq = { version = "2.10.1", features = ["json", "tls"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
debug = true
